# emvault-esplora

./: Cargo.toml  README.md
docs/design/: integration-design.md  salvage-from-emvault-core.md
docs/design/reference/: esplora_broadcast_signet.rs  esplora_live_signet.rs
src/: backend.rs  convert.rs  error.rs  internal.rs  lib.rs  result.rs  sync.rs  waterfalls.rs
tests/: live_broadcast.rs  live_signet.rs  offline.rs
