[package]
name = "emvault-esplora"
version = "0.1.0"
edition = "2024"
description = "Nodeless Esplora + Waterfalls chain backend for EmVault (BDK) wallets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmikeska/emvault-esplora"

[dependencies]
bdk_wallet = "3.1.0"
bitcoin = "0.32.10"
# Bitcoin-agnostic String/int DTOs → no `bitcoin` version conflict with BDK.
# Path/patch until esplora-rs is published (see docs/design/integration-design.md §6.5).
esplora-rs = { path = "../esplora-rs" }
thiserror = "2"
hex = "0.4"
# NO `futures` — `buffer_unordered` was deliberately dropped (invariant §1.1):
# render-path sync must stay `for<'a> Send`.

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1"
dotenvy = "0.15"
